--- a/day11/templates/read.html
+++ b/day11/templates/read.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <title>Reddit Reader</title>
+  <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet"></link>
 </head>
+
 <body>
+  <header>
+    <h1>
+
+      <a href={{ url_for('check') }}>Reddit Reader</a>
+    </h1>
+    <h3>Reading: {% for s in subs %} r/{{s}} {% endfor %} </h3>
+  </header>
+  <main>
+    {% for r in result %}
+    <div>
+      <h3>
+        <a href="{{r.url}}" target="_blank">{{r.title}}</a>
+      </h3>
+      <h4> {{r.upvote}} upvotes · r/{{r.sub}}</h4>
+      <hr/>
+    </div>
+    {% endfor %}
+
+  </main>
+
+
 
 </body>
+
 </html>
